# tentacle

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
scripts/: autoissue.py
systemd/: tentacle-backlog.service  tentacle-backlog.timer  tentacle-env.example  tentacle.service  tentacle.timer
tentacle/: __main__.py  cli.py  config.py  context.py  db.py  decay.py  dedup.py  issues.py  models.py
tentacle/llm/: analyze.py  client.py  filter.py  prompts.py
tentacle/sources/: arxiv.py  base.py  hackernews.py  rss.py  semantic_scholar.py
tests/: test_analyze.py  test_budget.py  test_cli.py  test_client.py  test_config.py  test_context.py  test_db.py  test_decay.py  test_filter.py  test_issues.py  test_llm_client.py  test_sources.py
